# combee

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  complex.parquet
notebooks/: analysis.ipynb
notebooks/datasets/: anime.parquet
src/: dataframe.rs  errors.rs  functions.rs  lib.rs  parquet_deserializer.rs
src/nn/: dense_layer.rs  mod.rs
tests/: test_dataframe.rs  test_functions.rs  test_groupby.rs  test_read_csv.rs  test_read_csv_schema.rs  test_read_parquet.rs  test_read_parquet_schema.rs  test_sort.rs  test_split_concat.rs  test_to_csv.rs  test_to_parquet.rs
tests/fixtures/: basic.csv  basic.parquet  complex.parquet  groupby.csv  groupby_string.csv  invalid.csv  unsorted.csv
