[package]
name = "combee"
description = "Combee is a flexible data analysis library written in pure Rust inspired by pandas (python)."
homepage = "https://github.com/DanielSanRocha/combee"
repository = "https://github.com/DanielSanRocha/combee"
license-file = "LICENSE"
version = "0.3.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
csv = "1"
log = "0"
parquet = "45"
serde = { version = "1", features = ["derive"] }
