[package]
name = "combee"
description = "Combee is a flexible data analysis library written in pure Rust inspired by pandas (python)."
homepage = "https://github.com/DanielSanRocha/combee"
repository = "https://github.com/DanielSanRocha/combee"
license-file = "LICENSE"
version = "0.6.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
arrow2 = { version = "0.17", features = ["io_parquet"] }
csv = "1"
log = "0"
parquet = "46"
serde = { version = "1", features = ["derive"] }
serde_arrow = { version = "0.7", features=["arrow2-0-17"] }
time = "0.3"
